# downloader-ultimate

./: .env.example  .gitignore  .pre-commit-config.yaml  BA_TASK_BREAKDOWN.md  Makefile  README.md  UAT_RETEST_REPORT_v10.md  UAT_RETEST_REPORT_v11.md  UAT_RETEST_REPORT_v12.md  UAT_RETEST_REPORT_v2.md  UAT_RETEST_REPORT_v3.md  UAT_RETEST_REPORT_v4.md  UAT_RETEST_REPORT_v5.md  UAT_RETEST_REPORT_v6.md  UAT_RETEST_REPORT_v7.md  UAT_RETEST_REPORT_v8.md  UAT_RETEST_REPORT_v9.md  UAT_TEST_REPORT.md  docker-compose.override.yml  docker-compose.yml
agents/: AGENTS_REGISTRY.md
backend/: .flake8  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  download.py  dub.py  jobs.py  logo.py  pipeline.py  subtitle.py  transcribe.py  translate.py
backend/app/core/: config.py  logging.py  middleware.py  security.py
backend/app/models/: download.py  dub.py  logo.py  pipeline.py  stt.py  subtitle.py  translate.py
backend/app/services/: audio.py  downloader.py  dubbing.py  job_store.py  logo.py  pipeline.py  redis_store.py  stt.py  subtitle.py  translator.py  tts.py
backend/app/storage/: file_manager.py
backend/app/workers/: __init__.py  celery_app.py  tasks.py
backend/static/: index.html
backend/tests/: conftest.py  test_download.py  test_dubbing.py  test_health.py  test_integration.py  test_logo.py  test_security.py  test_stt.py  test_subtitle.py  test_translation.py
docs/: downloader_ultimate.postman_collection.json  n8n_integration_guide.md
frontend/: index.html  (+1 more)
(+16 files in other folders)
