[tool.poetry]
name = "downloader-ultimate"
version = "0.1.0"
description = "Video Downloader & Dubbing Tool API"
authors = ["phuphan2010"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
celery = {extras = ["redis"], version = "^5.4.0"}
redis = "^5.0.0"
yt-dlp = ">=2024.12.0"
faster-whisper = "^1.0.3"
deep-translator = "^1.11.4"
deepl = "^1.18.0"
gTTS = "^2.5.1"
boto3 = "^1.34.0"
python-multipart = "^0.0.9"
bcrypt = "^4.1.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
httpx = "^0.27.0"
aiofiles = "^23.2.1"
structlog = "^24.2.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.5.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"
pre-commit = "^3.7.0"
locust = "^2.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
